feat: enhance trip setup personalization and itinerary generation